src/objects/MX_WB_preguntasEtapa__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contiene la relación de tipos de registro por etapas que se pueden tener para mostrar las objeciones relacionadas con la misma.</description>
	    <fields>
        <fullName>MX_SB_VTS_Producto__c</fullName>
        <description>Nombre del producto de interes</description>
        <inlineHelpText>Nombre del producto de interes</inlineHelpText>
        <label>Producto Asociado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_developerNameRT__c</fullName>
        <description>Contiene el developer name del tipo de registro correspondiente a la etapa actual.</description>
        <label>Tipo de registro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_proceso__c</fullName>
        <description>Nombre de la etapa donde se mostraran las objeciones.</description>
        <label>Proceso correspondiente</label>
        <type>TextArea</type>
    </fields>
    <label>preguntas Etapa</label>
</CustomObject>